# swirldb

./: .gitignore  LICENSE  README.md  package.json  swirldb.config.json
.github/workflows/: deploy-docs.yml
admin/: astro.config.mjs  package-lock.json  package.json
admin/public/: swirldb.js  swirldb_core.js  swirldb_core_bg.wasm.d.ts
admin/src/pages/: activity.astro  connections.astro  data.astro  index.astro  namespaces.astro
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/public/: CNAME  package.json  swirldb.js  swirldb_core.d.ts
docs/public/wasm/: package.json  swirldb_core.d.ts  swirldb_core.js  swirldb_core_bg.wasm.d.ts
docs/src/layouts/: Layout.astro
docs/src/pages/: architecture.astro  auth.astro  chat-client.astro  chat.astro  encryption.astro  index.astro  lifecycle.astro  policy.astro  proxy-api.astro  storage.astro  sync.astro
native/swirldb-browser/: Cargo.toml  package.json
native/swirldb-browser/src/: lib.rs  storage.rs
native/swirldb-core/: Cargo.toml  swirldb.config.json
native/swirldb-core/src/: core.rs  lib.rs  policy.rs  sync.rs
native/swirldb-core/src/auth/: anonymous.rs  jwt.rs  mod.rs  static_auth.rs
native/swirldb-core/src/encryption/: aes_gcm.rs  field_level.rs  mod.rs  unencrypted.rs
native/swirldb-core/src/protocol/: mod.rs
native/swirldb-core/src/storage/: mod.rs
native/swirldb-server/: Cargo.toml  README.md  generate-self-signed-cert.sh
native/swirldb-server/src/: main.rs  policy.rs  state.rs
native/swirldb-server/src/storage/: mod.rs
