[package]
name = "swirldb-core"
version = "0.2.0"
edition = "2021"
authors = ["Everyside Innovations, LLC"]
description = "Modular-first CRDT-based embedded database engine"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib for WASM, rlib for Rust

[dependencies]
# Core - always included
automerge = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
async-trait = "0.1"
bytes = "1.5"

# Cryptography (cross-platform: WASM + native)
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Random number generation
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
uuid = { version = "1.18", features = ["v4", "js"] }  # js feature required for WASM

[dev-dependencies]
futures = "0.3"

[profile.release]
# Optimize for speed
opt-level = 3
lto = true
codegen-units = 1
